# nous

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOESIS_COMPLETE_HANDOFF.md  NOESIS_SESSION_2_HANDOFF.md  NOESIS_SESSION_3_HANDOFF.md  NOESIS_SESSION_3_PROMPT.md  NOESIS_SESSION_4_PROMPT.md  NOESIS_SESSION_PROMPT.md  NOUS_COMPLETE_HANDOFF.md  NOUS_GITHUB_ACTION_SESSION_HANDOFF.md  NOUS_IDE_SESSION_HANDOFF.md  NOUS_MITOSIS_SESSION_HANDOFF.md  NOUS_SESSION_10_HANDOFF.md  NOUS_SESSION_11_PROMPT.md  NOUS_SESSION_12_HANDOFF.md  NOUS_SESSION_15_HANDOFF.md  NOUS_SESSION_3_HANDOFF.md  NOUS_SESSION_3_PROMPT.md  NOUS_SESSION_46_HANDOFF.md  NOUS_SESSION_47_HANDOFF.md  NOUS_SESSION_48_HANDOFF.md  NOUS_SESSION_49_HANDOFF.md  NOUS_SESSION_4_HANDOFF.md  NOUS_SESSION_4_PROMPT.md  NOUS_SESSION_50_HANDOFF.md  NOUS_SESSION_51_HANDOFF.md  NOUS_SESSION_52_HANDOFF.md  NOUS_SESSION_6_HANDOFF.md  NOUS_SESSION_8_HANDOFF.md  NOUS_SESSION_9_PROMPT.md  NOUS_WEBSITE_SESSION_HANDOFF.md  NOUS_WHITE_PAPER_v1_1.docx  NOUS_WHITE_PAPER_v1_2.docx  NOUS_v34_SESSION_HANDOFF.md  README.md  __init__.py  __main__.py  aevolver.py  (+248 more)
.github/scripts/: pr_comment_generator.py
.github/workflows/: nous-diff.yml
nous-vscode/: README.md  extension.js  language-configuration.json  package.json  snippets.json
nous-vscode/server/: nous_lsp.py
nous-vscode/syntaxes/: nous.tmLanguage.json
nous_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stdlib/aggregator/: main.nous  nous.toml
stdlib/logger/: main.nous  nous.toml
stdlib/router/: main.nous  nous.toml
stdlib/scheduler/: main.nous  nous.toml
stdlib/watcher/: main.nous  nous.toml
templates/: content_pipeline.nous  customer_service.nous  governance_demo.nous  market_monitor.nous  trading_floor.nous  trading_floor.py
tests/: regression_baseline.json  test_governance_dashboard.py  test_governance_lint.py  test_governance_simulator.py  test_inject_message.py  test_intervention.py  test_lsp_lint_integration.py  test_policy_grammar.py  test_replay_e2e.nous  test_replay_e2e.py  test_replay_phase_c.py  test_replay_phase_d.py  test_risk_engine.py  test_verify_lint_integration.py
website/: BehavioralDiffVisualizer.jsx  README.md  ide.html  index.html  verify-fix.js
website/blog/: index.html
website/docs/: index.html
website/examples/: index.html
