[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nous-lang"
version = "4.1.1"
description = "NOUS (Νοῦς) — The Living Language for Agentic AI Systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Hlias Staurou", email = "support@nous-lang.org"},
]
keywords = ["ai", "agents", "language", "compiler", "evolution", "multi-agent", "soul", "mitosis", "symbiosis", "metabolism", "consciousness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lark>=1.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
lsp = ["pygls>=1.3.0", "lsprotocol>=2024.0.0"]
all = ["nous-lang[lsp]"]

[project.urls]
Homepage = "https://nous-lang.org"
Repository = "https://github.com/contrario/nous"
Documentation = "https://nous-lang.org/docs"

[project.scripts]
nous = "cli:main"

[tool.setuptools]
py-modules = [
    "cli", "parser", "ast_nodes", "validator", "typechecker",
    "codegen", "codegen_js", "runtime", "bridge", "nsp",
    "formatter", "profiler", "debugger", "repl", "test_runner",
    "plugin_manager", "registry", "workspace", "import_resolver",
    "cross_world", "error_recovery", "watcher", "watch", "benchmarks",
    "docs_generator", "visualizer", "distributed", "wasm_builder",
    "self_compiler", "compiler_senses", "verifier", "natural_lang",
    "lsp_server", "behavioral_diff", "cost_oracle", "mcp_bridge",
    "migrate_v2",
    "mitosis_engine", "immune_engine", "dream_engine",
    "telemetry_engine", "hot_reload_engine", "symbiosis_engine",
    "metabolism_engine", "consciousness_engine",
    "nous_runtime", "nous_ast_runner",
    "nous_api", "grammar_data",
]

[tool.setuptools.package-data]
"*" = ["*.lark", "*.nous"]
